# GoddamnEngine

./: .clang-format  .gitignore  LICENSE.md  LICENSE.txt  README.md  SetupGoddamnSDK.bat  SetupGoddamnSDK.command  SetupGoddamnSDK.sh  SetupGoddamnSDK.vbs  clang-format.txt
Source/: CMakeLists.txt  GoddamnEngine.sln.lnk
Source/Logo/Source/: SplashScreen.psd
Source/Projects/GoddamnBuildSystem/: GoddamnBuildSystem-MonoDevelop.csproj  GoddamnBuildSystem-MonoDevelop.sln  GoddamnBuildSystem.csproj  GoddamnBuildSystem.gdproj.cs  README.md
Source/Projects/GoddamnBuildSystem/BuildSystem/: BuildSystem.cs
Source/Projects/GoddamnBuildSystem/BuildSystem/Collectors/: BuildToolProjectEnumerator.cs  Collector.cs  Dependency.cs  Project.cs  ProjectDependency.cs  Solution.cs
Source/Projects/GoddamnBuildSystem/BuildSystem/ProjectGenerator/: CMakeProjectGenerator.cs  ProjectGenerator.cs  VisualStudioProjectGenerator.cs  XCodeProjectGenerator.cs
Source/Projects/GoddamnBuildSystem/BuildSystem/Support/: Compiler.cs  Extensions.cs
Source/Projects/GoddamnBuildSystem/Properties/: App.config  AssemblyInfo.cs
Source/Projects/GoddamnBuildSystem/Source/: BuildSystem.cs
Source/Projects/GoddamnBuildSystem/Source/Collectors/: Collector.cs  Dependency.cs  Project.cs  Solution.cs
Source/Projects/GoddamnBuildSystem/Source/Other Utilities/: ProjectCompiler.cs
Source/Projects/GoddamnBuildSystem/Source/OtherUtilities/: CopyrightVerifier.cs
Source/Projects/GoddamnBuildSystem/Source/Project Generators/: VisualStudio.cs  XCode.cs
Source/Projects/GoddamnBuildSystem/Source/ProjectCompiler/: ProjectCompiler.cs  ProjectRebuildOptimizer.cs
Source/Projects/GoddamnBuildSystem/Source/ProjectGenerator/: ProjectGenerator.cs  VisualStudio.cs  VisualStudioProjectGenerator.cs  XCode.cs
Source/Projects/GoddamnBuildSystem/Source/ProjectGenerators/: ProjectGenerator.cs  VisualStudio.cs  XCode.cs
Source/Projects/GoddamnBuildSystem/Source/Support/: CommandLineUI.cs  Compiler.cs  Extensions.cs
Source/Projects/GoddamnBuildSystem/Source/System/Collectors/: Collector.cs  Dependency.cs  Project.cs  Solution.cs
Source/Projects/GoddamnBuildSystem/Source/System/Support/: CommandLineUI.cs  Compiler.cs  Extensions.cs
Source/Projects/GoddamnCore/: CMakeLists.txt  GoddamnCore.gddep.cs  GoddamnCore.gdproj.cs
Source/Projects/GoddamnCore/Dependencies/gtk/: gtk.gddep.cs
Source/Projects/GoddamnCore/Dependencies/intel_tbb/: tbb.lib  tbbmalloc.lib  tbbmalloc_debug.lib
Source/Projects/GoddamnCore/Dependencies/jemalloc/: jemalloc.Windows.lib
Source/Projects/GoddamnCore/Dependencies/tlsf/include/: tlsf.c
Source/Projects/GoddamnCore/Dependencies/zlib/: zlibwapi.Debug.Windows.lib  zlibwapi.Release.Windows.lib
Source/Projects/GoddamnCore/Source/GoddamnEngine/: GoddamnCore.hxx  Include.h
Source/Projects/GoddamnCore/Source/GoddamnEngine/Core/: Algorithm.h  BasePlatform.h  Delegate.h  Geometry.h  Iterators.h  PlatformSpecificInclude.h  RefPtr.h  SharedPtr.h  Singleton.h  Tuple.h  TypeTraits.h  TypeTraitsEx.h  UniquePtr.h  Utility.h
Source/Projects/GoddamnCore/Source/GoddamnEngine/DInterface/: DEngineCore.cpp  DEngineCore.h  DInterface.h
Source/Projects/GoddamnEngine/: CMakeLists.txt  GoddamnEngine.gddep.cs  GoddamnEngine.gdproj.cs
Source/Projects/GoddamnEngine/Dependencies/glslang/include/: glslang.h
Source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/: EmptyForNow.cpp  EmptyForNow.h  Transform.h  hui.cpp
Source/Projects/GoddamnGraphics/GoddamnGraphicsDirect3D11/: GoddamnGraphicsDirect3D11.gdproj.cs_
Source/Projects/GoddamnGraphics/GoddamnGraphicsDirect3D1x/: GoddamnGraphicsDirect3D1x.gddep.cs  GoddamnGraphicsDirect3D1x.gdproj.cs_
Source/Projects/GoddamnGraphics/GoddamnGraphicsMetal/: GoddamnGraphicsMetal.gdproj.cs_
Source/Projects/GoddamnGraphics/GoddamnGraphicsOpenGL/: CMakeLists.txt  GoddamnGraphicsOpenGL.gdproj.cs_
Source/Projects/GoddamnGraphics/GoddamnGraphicsVulkan/: GoddamnGraphicsVulkan.gddep.cs  GoddamnGraphicsVulkan.gdproj.cs_
Source/Projects/GoddamnGraphics2DDirect2D/: GoddamnGraphics2DDirect2D.gddep.cs  GoddamnGraphics2DDirect2D.gdproj.cs_
Source/Projects/GoddamnGraphics2DDirect2D/Source/GoddamnEngine/Graphics2DDirect2D/: Graphics2DDirect2D.cpp  Graphics2DDirect2D.h  Graphics2DDirect2DBitmap.cpp
Source/Projects/GoddamnGraphicsDirect3D1x/Source/GoddamnEngine/GraphicsDirect3D1x/: GraphicsDirect3D1xFormatDXGI.h  GraphicsDirect3D1xFormatWIC.h  GraphicsDirect3D1xShaders.inl
Source/Projects/GoddamnGraphicsOpenGL/: GoddamnGraphicsOpenGL.gdproj.cs_
Source/Projects/GoddamnGraphicsOpenGL/Source/GoddamnEngine/GraphicsOpenGL/: GraphicsOpenGL.cpp  GraphicsOpenGL.h  GraphicsOpenGLBuffer.cpp  GraphicsOpenGLPipelineState.cpp  GraphicsOpenGLSDL2.cpp  GraphicsOpenGLSDL2.h  GraphicsOpenGLShaders.cpp  GraphicsOpenGLTextures.cpp  GraphicsOpenGLVertexArray.cpp  GraphicsOpenGLWindows.cpp  (+1 more)
Source/Projects/GoddamnInput/: GoddamnInput.gddep.cs  GoddamnInput.gdproj.cs_
Source/Projects/GoddamnOpenGLUtility/: GoddamnOpenGLUtility.csproj  GoddamnOpenGLUtility.gdproj.cs  OpenGLUtility.cs
Source/Projects/GoddamnOpenGLUtility/Properties/: App.config  AssemblyInfo.cs
Source/Projects/GoddamnReflector/: GoddamnReflector.gdproj.cs
Source/Projects/GoddamnReflector/CodeGenerator/: CodeGenerator.cpp
Source/Projects/GoddamnReflector/RePreprocessor/: RePreprocessor.h
Source/Projects/GoddamnReflector/Source/GoddamnReflector/: Reflector.cpp  Reflector.h
Source/Projects/GoddamnShaderCrossCompiler/: GoddamnShaderCrossCompiler.gddep.cs  GoddamnShaderCrossCompiler.gdproj.cs_
Source/Projects/GoddamnShaderCrossCompiler/Dependencies/mcpp/: mcpp.7z  mcpp.Debug.Windows.lib  mcpp.Release.Windows.lib
Source/Projects/GoddamnShaderCrossCompilerApp/: GoddamnShaderCrossCompilerApp.gddep.cs  GoddamnShaderCrossCompilerApp.gdproj.cs_
Source/Projects/GoddamnUI/: GoddamnUI.gdproj.cs
Source/Projects/Samples/01_SimpleScene/: CMakeLists.txt  Sample01.gdproj.cs
Source/Projects/Samples/01_SimpleScene/Source/: SimpleScene.cpp  dirent.h
Source/Projects/Samples/GoddamnShadingLanguage/: GoddamnShadingLanguage.gdproj.cs
(+1412 files in other folders)
