cmake_minimum_required (VERSION 2.8)
project(GoddamnCore)
include_directories(H:/GoddamnEngine/source/Projects/GoddamnCore/Source
	H:/GoddamnEngine/source/Projects/GoddamnCore/Dependencies/gsl/include
	H:/GoddamnEngine/source/Projects/GoddamnCore/Dependencies/intel_tbb/include
	H:/GoddamnEngine/source/Projects/GoddamnCore/Dependencies/jemalloc/include
	H:/GoddamnEngine/source/Projects/GoddamnCore/Dependencies/zlib/include
	)
add_library(GoddamnCore SHARED
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Include.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/PlatformSpecificInclude.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/App/App.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/App/App.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/App/AppWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/App/AppWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/App/Library.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/App/Library.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/App/LibraryWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/App/LibraryWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Allocator.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Allocator.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Architecture.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Assert.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Assert.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Types.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/TypeTraits.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Version.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Compiler/GCC.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/Compiler/MSVC.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/CStdlib/CChar.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/CStdlib/CMemory.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/CStdlib/CStdio.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/CStdlib/CStdlib.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/CStdlib/CString.asm
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Base/CStdlib/CString.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/Atomics.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/AtomicsMicrosoft.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/CriticalSection.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/CriticalSectionMicrosoft.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/Future.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/JobManager.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/JobManager.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/JobManagerDelegates.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/LiteMutex.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/LockFreeStack.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/LockFreeStackMicrosoft.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/Thread.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/ThreadWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Concurrency/ThreadWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/Array.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/Array.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/InitializerList.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/List.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/Map.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/Map.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/Set.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/Set.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/String.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/String.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/StringBuilder.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/UnorderedMap.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/UnorderedSet.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/UnorderedVectorMap.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/UnorderedVectorSet.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/Vector.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/Vector.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/HashTable/HashTable.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/HashTable/HashTable.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/HashTable/HashTableBase.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/HashTable/HashTableBase.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/HashTable/HashTableBase.LockFree.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/HashTable/HashTableBase.LockFree.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/RedBlackTree/RedBlackTree.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Containers/RedBlackTree/RedBlackTree.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/DLLResources/DLLResources.rc
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/DLLResources/resource.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/Assert.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/AssertWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/AssertWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/Debug.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/Debug.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/DebugWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/DebugWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/SplashScreen.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/SplashScreen.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/SplashScreenWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/SplashScreenWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/Window.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/Window.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/WindowWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Interaction/WindowWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/Archive.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/Archive.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/Directory.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/DirectoryWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileStream.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileStreamStandard.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileStreamWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileSystemWatcher.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileSystemWatcher.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileSystemWatcherWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileSystemWatcherWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileUtilities.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileUtilities.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileUtilitiesWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/FileUtilitiesWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/MemoryStream.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/Paths.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/Paths.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/PathsWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/PathsWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/IO/Stream.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/Geometry.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/Math.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/Matrix.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/Quaternion.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/Random.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/Random.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/SIMD.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/SIMDDirectXMath.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/SIMDFpu.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/SIMDNeon.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/SIMDSse.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/Vector.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/VectorX.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/VectorX.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Math/VectorZ.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Misc/Allocator.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Misc/AllocatorJE.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Misc/AllocatorTBB.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Misc/AllocatorWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Misc/Endian.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Misc/GUID.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Misc/GUID.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Misc/Misc.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Base.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Enum.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Enum.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Object.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Object.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/ObjectTests.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/ObjectUtility.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/ObjectUtility.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/ObjectVisitor.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/RefPtr.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Struct.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/DOM.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/DOMJson.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/DOMJson.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/ReaderWriter.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/ReaderWriterDOM.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/ReaderWriterJson.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/Serialization.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/Serialization.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Object/Serialization/SerializationBase.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/Algorithm.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/ContainerAllocator.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/Function.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/Iterators.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/SharedPtr.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/Singleton.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/UniquePtr.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/Utility.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Templates/VaryingArgsMacro.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Testing/Testing.cpp
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Testing/Testing.h
	H:/GoddamnEngine/source/Projects/GoddamnCore/Source/GoddamnEngine/Core/Testing/Testing2.h
	)
