cmake_minimum_required (VERSION 2.8)
project(GoddamnEngine)
include_directories(H:/GoddamnEngine/source/Projects/GoddamnEngine/Source
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Dependencies/glew/include
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Dependencies/glslang/include
	H:/GoddamnEngine/Source/Projects/GoddamnCore/Source
	)
add_library(GoddamnEngine SHARED
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Behaviour.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Camera.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Camera.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Collider.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Collider.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Component.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Component.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Entity.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Entity.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Light.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Light.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/MeshFiler.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/MeshFiler.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/MeshRenderer.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/MeshRenderer.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Rigidbody.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Rigidbody.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Scene.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Scene.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Transform.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Transform.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/AmbientOcclusion.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/AmbientOcclusion.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/AmbientOcclusionSSAO.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/AmbientOcclusionSSAO.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/AntiAliasing.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/AntiAliasing.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/Bloom.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/Bloom.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/ColorCorrection.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/ColorCorrection.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/Combine.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/Combine.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/DeferredLighting.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/DeferredLighting.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/DepthOfField.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/DepthOfField.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/Effect.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/Effect.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/GaussianBlur.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/GaussianBlur.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/MotionBlur.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/Effects/MotionBlur.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/ShadowMapping/HardShadows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/ShadowMapping/HardShadows.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/ShadowMapping/SoftShadowsCSM.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/ShadowMapping/SoftShadowsCSM.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/ShadowMapping/SoftShadowsPCF.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/ShadowMapping/SoftShadowsPCF.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/ShadowMapping/SoftShadowsSampled.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Entity/ShadowMapping/SoftShadowsSampled.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/UniqueInterface.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/UniqueInterface.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/Graphics.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/Graphics.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/GraphicsFormat.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/GraphicsLibSDL2.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/GraphicsLibSDL2.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/GraphicsShaders.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/GraphicsShaders.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/GraphicsWindows.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Interface/Graphics/GraphicsWindows.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Material.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Material.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Mesh.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Mesh.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Resource.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Resource.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Shader.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Shader.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/StaticMesh.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/StaticMesh.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Texture2D.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/Texture2D.h
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/TextureCube.cpp
	H:/GoddamnEngine/source/Projects/GoddamnEngine/Source/GoddamnEngine/Engine/Resources/TextureCube.h
	)
